[v0.9.162] Workflows... Linux will also be an executable in resource folder on the same level.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -149,10 +149,15 @@ jobs:
           cp _PLEASE_READ_ME.txt LICENSES.txt README.md release/
           
           else # Linux
-          # For Linux, create a portable folder just like on Windows
+          # For Linux, create a portable folder with the executable, resources, and libraries
           cp build/Advancely release/
           cp -r resources release/
           cp _PLEASE_READ_ME.txt LICENSES.txt README.md release/
+          
+          # Copy the required SDL shared libraries (.so files) into the release folder
+          cp /usr/local/lib/libSDL3.so.0 release/
+          cp /usr/local/lib/libSDL3_image.so.0 release/
+          cp /usr/local/lib/libSDL3_ttf.so.0 release/
           fi
 
       - name: Upload Release Artifact
