--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,78 +78,84 @@ jobs:
           mkdir release
           
             if [ "$RUNNER_OS" == "macOS" ]; then
-            # --- SCRIPT TO CREATE A PORTABLE FOLDER FOR MACOS ---
-
-            # 1. Define paths for the executable and the final release folder
-            EXE_PATH="build/Advancely"
-            DEST_DIR="release" # All files will go into the 'release' folder
-          
-            # 2. Copy the main files into the release folder first
-            cp "$EXE_PATH" "$DEST_DIR/"
-            cp -r resources "$DEST_DIR/"
-            cp _PLEASE_READ_ME.txt LICENSES.txt README.md "$DEST_DIR/"
-
-            # 3. Create lists for tracking dependencies
-            LIBS_TO_PROCESS=()
-            PROCESSED_LIBS=() # Tracks full original paths for fixup
-            COPIED_LIBS_BASENAMES=() # Tracks filenames to prevent duplicates
-
-            # 4. Find direct dependencies of the executable
-            DIRECT_DEPS=$(otool -L "$EXE_PATH" | grep '/opt/homebrew' | awk '{print $1}' | sed 's/://')
-            for dep in $DIRECT_DEPS; do
-              LIBS_TO_PROCESS+=("$dep")
-            done
-          
-            # 5. Recursively find all transitive dependencies
-            while [ ${#LIBS_TO_PROCESS[@]} -gt 0 ]; do
-              lib_path=${LIBS_TO_PROCESS[0]}
-              lib_name=$(basename "$lib_path")
-              LIBS_TO_PROCESS=("${LIBS_TO_PROCESS[@]:1}")
-
-              # Check if a library with this FILENAME has already been copied
-              if [[ " ${COPIED_LIBS_BASENAMES[*]} " =~ " ${lib_name} " ]]; then
-                # Already processed, but we still need to fix the executable's link to it
-                install_name_tool -change "$lib_path" "@executable_path/$lib_name" "$DEST_DIR/Advancely"
-                continue
-              fi
-          
-              echo "Processing dependency: $lib_path"
-              # Copy the library directly into the release folder
-              cp "$lib_path" "$DEST_DIR/"
-              # Update the executable to look for the library in its own directory
-              install_name_tool -change "$lib_path" "@executable_path/$lib_name" "$DEST_DIR/Advancely"
-          
-              # Find dependencies OF THIS LIBRARY and add them to the queue
-              TRANSITIVE_DEPS=$(otool -L "$lib_path" | grep '/opt/homebrew' | awk '{print $1}' | sed 's/://')
-              for transitive_dep in $TRANSITIVE_DEPS; do
-                LIBS_TO_PROCESS+=("$transitive_dep")
+              # --- SCRIPT TO CREATE A PORTABLE FOLDER FOR MACOS ---
+  
+              # 1. Define paths for the executable and the final release folder
+              EXE_PATH="build/Advancely"
+              DEST_DIR="release" # All files will go into the 'release' folder
+            
+              # 2. Copy the main files into the release folder first
+              cp "$EXE_PATH" "$DEST_DIR/"
+              cp -r resources "$DEST_DIR/"
+              cp _PLEASE_READ_ME.txt LICENSES.txt README.md "$DEST_DIR/"
+  
+              # 3. Create lists for tracking dependencies
+              LIBS_TO_PROCESS=()
+              PROCESSED_LIBS=() # Tracks full original paths for fixup
+              COPIED_LIBS_BASENAMES=() # Tracks filenames to prevent duplicates
+  
+              # 4. Find direct dependencies of the executable
+              DIRECT_DEPS=$(otool -L "$EXE_PATH" | grep '/opt/homebrew' | awk '{print $1}' | sed 's/://')
+              for dep in $DIRECT_DEPS; do
+                LIBS_TO_PROCESS+=("$dep")
               done
-
-              PROCESSED_LIBS+=("$lib_path")
-              COPIED_LIBS_BASENAMES+=("$lib_name")
-            done
-          
-            # 6. Final fixup: Update all copied libraries to link against each other correctly
-            for copied_lib in "$DEST_DIR"/lib*.dylib; do
-              for original_lib_path in "${PROCESSED_LIBS[@]}"; do
-                original_lib_name=$(basename "$original_lib_path")
-                if [ -f "$DEST_DIR/$original_lib_name" ]; then
-                  install_name_tool -change "$original_lib_path" "@executable_path/$original_lib_name" "$copied_lib"
+            
+              # 5. Recursively find all transitive dependencies
+              while [ ${#LIBS_TO_PROCESS[@]} -gt 0 ]; do
+                lib_path=${LIBS_TO_PROCESS[0]}
+                lib_name=$(basename "$lib_path")
+                LIBS_TO_PROCESS=("${LIBS_TO_PROCESS[@]:1}")
+  
+                # Check if a library with this FILENAME has already been copied
+                if [[ " ${COPIED_LIBS_BASENAMES[*]} " =~ " ${lib_name} " ]]; then
+                  # Already processed, but we still need to fix the executable's link to it
+                  install_name_tool -change "$lib_path" "@executable_path/$lib_name" "$DEST_DIR/Advancely"
+                  continue
                 fi
+            
+                echo "Processing dependency: $lib_path"
+                # Copy the library directly into the release folder
+                cp "$lib_path" "$DEST_DIR/"
+                # Update the executable to look for the library in its own directory
+                install_name_tool -change "$lib_path" "@executable_path/$lib_name" "$DEST_DIR/Advancely"
+            
+                # Find dependencies OF THIS LIBRARY and add them to the queue
+                TRANSITIVE_DEPS=$(otool -L "$lib_path" | grep '/opt/homebrew' | awk '{print $1}' | sed 's/://')
+                for transitive_dep in $TRANSITIVE_DEPS; do
+                  LIBS_TO_PROCESS+=("$transitive_dep")
+                done
+  
+                PROCESSED_LIBS+=("$lib_path")
+                COPIED_LIBS_BASENAMES+=("$lib_name")
               done
-            done
+            
+              # 6. Final fixup: Update all copied libraries to link against each other correctly
+              for copied_lib in "$DEST_DIR"/lib*.dylib; do
+                for original_lib_path in "${PROCESSED_LIBS[@]}"; do
+                  original_lib_name=$(basename "$original_lib_path")
+                  if [ -f "$DEST_DIR/$original_lib_name" ]; then
+                    install_name_tool -change "$original_lib_path" "@executable_path/$original_lib_name" "$copied_lib"
+                  fi
+                done
+              done
           
-            # 7. Force-rename the template directory and key files to lowercase
-            TEMPLATE_DIR="$DEST_DIR/resources/templates/1.16.1"
-            if [ -d "$TEMPLATE_DIR/All_Advancements" ]; then
-              echo "Correcting folder capitalization for macOS..."
-              mv "$TEMPLATE_DIR/All_Advancements" "$TEMPLATE_DIR/all_advancements"
-            fi
-            if [ -f "$TEMPLATE_DIR/all_advancements/1_16_1_All_Advancements.json" ]; then
-              mv "$TEMPLATE_DIR/all_advancements/1_16_1_All_Advancements.json" "$TEMPLATE_DIR/all_advancements/1_16_1_all_advancements.json"
-            fi
-            if [ -f "$TEMPLATE_DIR/all_advancements/1_16_1_All_Advancements_lang.json" ]; then
-              mv "$TEMPLATE_DIR/all_advancements/1_16_1_All_Advancements_lang.json" "$TEMPLATE_DIR/all_advancements/1_16_1_all_advancements_lang.json"
+              # 7. Ad-hoc code sign all bundled libraries and the executable to improve compatibility
+              echo "Ad-hoc signing bundled libraries and executable..."
+              codesign --force --sign - "$DEST_DIR"/lib*.dylib
+              codesign --force --deep --sign - "$DEST_DIR/Advancely"
+            
+              # 8. Force-rename the template directory and key files to lowercase
+              TEMPLATE_DIR="$DEST_DIR/resources/templates/1.16.1"
+              if [ -d "$TEMPLATE_DIR/All_Advancements" ]; then
+                echo "Correcting folder capitalization for macOS..."
+                mv "$TEMPLATE_DIR/All_Advancements" "$TEMPLATE_DIR/all_advancements"
+              fi
+              if [ -f "$TEMPLATE_DIR/all_advancements/1_16_1_All_Advancements.json" ]; then
+                mv "$TEMPLATE_DIR/all_advancements/1_16_1_All_Advancements.json" "$TEMPLATE_DIR/all_advancements/1_16_1_all_advancements.json"
+              fi
+              if [ -f "$TEMPLATE_DIR/all_advancements/1_16_1_All_Advancements_lang.json" ]; then
+                mv "$TEMPLATE_DIR/all_advancements/1_16_1_All_Advancements_lang.json" "$TEMPLATE_DIR/all_advancements/1_16_1_all_advancements_lang.json"
+              fi
             fi
           
           else # Linux
