--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -157,7 +157,7 @@ jobs:
               mv "$TEMPLATE_DIR/all_advancements/1_16_1_All_Advancements_lang.json" "$TEMPLATE_DIR/all_advancements/1_16_1_all_advancements_lang.json"
             fi
           
-          else # Linux
+          elif [ "$RUNNER_OS" == "Linux" ]; then # Linux
             # For Linux, create a portable folder with the executable, resources, and libraries
             cp build/Advancely release/
             cp -r resources release/
