--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,9 +80,13 @@ jobs:
           if [ "$RUNNER_OS" == "macOS" ]; then
             # --- SCRIPT TO CREATE A PORTABLE FOLDER FOR MACOS ---
 
-            # 1. Define paths for the executable and the final release folder
+            # 1. Define paths
             EXE_PATH="build/Advancely"
-            DEST_DIR="release" # All files will go into the 'release' folder
+            DEST_DIR="release"
+
+            # 1a. Dynamically get the Homebrew prefix to support both Intel and Apple Silicon
+            BREW_PREFIX=$(brew --prefix)
+            echo "Using Homebrew prefix: $BREW_PREFIX"
           
             # 2. Copy the main files into the release folder first
             cp "$EXE_PATH" "$DEST_DIR/"
@@ -94,8 +98,8 @@ jobs:
             PROCESSED_LIBS=() # Tracks full original paths for fixup
             COPIED_LIBS_BASENAMES=() # Tracks filenames to prevent duplicates
 
-            # 4. Find direct dependencies of the executable
-            DIRECT_DEPS=$(otool -L "$EXE_PATH" | grep '/opt/homebrew' | awk '{print $1}' | sed 's/://')
+            # 4. Find direct dependencies of the executable, using the dynamic prefix
+            DIRECT_DEPS=$(otool -L "$EXE_PATH" | grep "$BREW_PREFIX" | awk '{print $1}' | sed 's/://')
             for dep in $DIRECT_DEPS; do
               LIBS_TO_PROCESS+=("$dep")
             done
@@ -114,13 +118,11 @@ jobs:
               fi
           
               echo "Processing dependency: $lib_path"
-              # Copy the library directly into the release folder
               cp "$lib_path" "$DEST_DIR/"
-              # Update the executable to look for the library in its own directory
               install_name_tool -change "$lib_path" "@executable_path/$lib_name" "$DEST_DIR/Advancely"
           
               # Find dependencies OF THIS LIBRARY and add them to the queue
-              TRANSITIVE_DEPS=$(otool -L "$lib_path" | grep '/opt/homebrew' | awk '{print $1}' | sed 's/://')
+              TRANSITIVE_DEPS=$(otool -L "$lib_path" | grep "$BREW_PREFIX" | awk '{print $1}' | sed 's/://')
               for transitive_dep in $TRANSITIVE_DEPS; do
                 LIBS_TO_PROCESS+=("$transitive_dep")
               done
@@ -138,8 +140,8 @@ jobs:
                 fi
               done
             done
-        
-            # 7. Ad-hoc code sign all bundled libraries and the executable to improve compatibility
+          
+            # 7. Ad-hoc code sign all bundled libraries and the executable
             echo "Ad-hoc signing bundled libraries and executable..."
             codesign --force --sign - "$DEST_DIR"/lib*.dylib
             codesign --force --deep --sign - "$DEST_DIR/Advancely"
